@@ -48,4 +48,8 @@
         <img src="images/game-icons/help.png" alt="FAQ" />
         <b data-translation="faq">FAQ</b>
     </button>
+    <button class="btn btn-default large-button" type="button" id="menu-privacy">
+        <img src="images/game-icons/info.png" alt="Privacy" />
+        <b data-translation="privacy">Privacy policy</b>
+    </button>
 </form>
