@@ -1,0 +1,51 @@
+<h2>Privacy policy</h2>
+
+<div id="privacy-app">
+    This application does not send or store any personal information. So far, soo good.
+</div>
+
+<div id="privacy-web">
+    <p>
+        This web application does not send or store any personal information, but it uses
+        <a href="https://en.wikipedia.org/wiki/Google_Analytics">Google Analytics</a> to know how many people use
+        the application, and this stores cookies on your web browser.
+    </p>
+
+    <h3>What information is collected?</h3>
+    <ul>
+        <li>
+            <a href="https://support.google.com/analytics/answer/2763052?hl=en">Part of your IP address</a>. 
+            Example: If your IP is 1.2.3.4, we send 1.2.3.0
+        </li>
+        <li>Your operating system version</li>
+        <li>Your screen resolution</li>
+        <li>The book you play</li>
+    </ul>
+    <p>
+        On the Google Analytics console we cannot see anything about some person. We can see statistics: How many people use the application,
+        from where (city / country), mean time played, how many times a book was player, etc.
+    </p>
+    <p>
+        The statistics are stored 26 months.
+    </p>
+
+    <h3>How is used this information</h3>
+    <p>
+        This info is used for our happiness: We look at the statistics. If a lot of people play with this game, we are happy.
+        If nobody play with it, we are sad.
+    </p>
+
+    <h3>Get out your hands of my privacy!</h3>
+    <p>
+        You can disable sending info from this web to Google Analytics by unchecking this:
+        <div class="well">
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" id="privacy-send" checked="checked"> 
+                    <span>Send statistics to Google Analytics</span>
+                </label>
+            </div>
+        </div>
+    </p>
+
+</div>
