@@ -1,0 +1,51 @@
+<h2>Política de privacidad</h2>
+
+<div id="privacy-app">
+    Esta aplicación no envia ni guarda ninguna información personal.
+</div>
+
+<div id="privacy-web">
+    <p>
+        Esta aplicación web no envia ni guarda ninguna información personal, pero usa
+        <a href="https://es.wikipedia.org/wiki/Google_Analytics">Google Analytics</a> para saber cuanta gente usa
+        la aplicación, y esto guarda cookies en tu navegador web.
+    </p>
+
+    <h3>¿Qué información es recogida?</h3>
+    <ul>
+        <li>
+            <a href="https://support.google.com/analytics/answer/2763052?hl=es">Parte de tu dirección IP</a>. 
+            Ejemplo: Si tu IP es 1.2.3.4, se manda 1.2.3.0
+        </li>
+        <li>Tu versión del sistema operativo</li>
+        <li>Tu resolución de pantalla</li>
+        <li>El libro al que juegas</li>
+    </ul>
+    <p>
+        En la consola de Google Analytics no podemos ver nada sobre alguien en concreto. Podemos ver estadísticas:
+        Cuanta gente juega, desde donde (ciudad / pais), el tiempo medio que se juega, cuantas veces se juega a un libro, etc.
+    </p>
+    <p>
+        Las estadísticas se guardan 26 meses.
+    </p>
+
+    <h3>Como se usa esta información</h3>
+    <p>
+        Esta información se usa para nuestra felicidad: Miramos las estadisticas. Si un montón de gente juega, estamos felices.
+        Si nadie juega, estamos tristes.
+    </p>
+
+    <h3>¡Manten tus manos lejos de mi privacidad!</h3>
+    <p>
+        Puedes deshabilitar el envio de estadísticas a Google Analytics desmarcando esto:
+        <div class="well">
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" id="privacy-send" checked="checked"> 
+                    <span>Enviar estadísticas a Google Analytics</span>
+                </label>
+            </div>
+        </div>
+    </p>
+
+</div>
