@@ -62,3 +62,5 @@
  - Fixed  bugs with the Crystal Star Pendant ("If you have **ever** been given a Crystal Star Pendant", not if you have it NOW)
  - Book 5, sect20: Fixed bug, stop combat after turn 3
  - Book 5, sect330: Fixed bug, stop combat after turn 2
+ - Added privacy policy
+ 
